# emd_traiding

./: .gitignore  README.md  api_main.py  data_scrapper.py  docker-compose.yml  main.py  pyproject.toml  reqs.txt  requirements.txt  sloper.py
api/: Dockerfile.api  __init__.py  api_main.py  api_reqs.txt  models.py  sloper.py
api/core/: sloper.py
core/: data_scrapper.py  sloper.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
ui/: Dockerfile.ui  config.toml  ui_card.py  ui_main.py  ui_mk.py  ui_reqs.txt
